# EmotionEvaluator

./: .env  .env.template  .gitignore  .pylintrc  Dockerfile  LICENSE  Makefile  README.md  compose.yaml  pyproject.toml  requirements.txt
data/: IMDB-movie-reviews.csv
results/LiYuan_amazon-review-sentiment-analysis/: classification_report.txt
results/cardiffnlp_twitter-roberta-base-sentiment-latest/: classification_report.txt
results/nlptown_bert-base-multilingual-uncased-sentiment/: results.csv
src/: custom_types.py  extract_data.py  main.py  preprocessor.py  sentiment_analyser.py  utils.py
src/evaluator_api/: main.py
src/frontend/: main.py  utils.py
src/results/: findings.txt
src/results/LiYuan_amazon-review-sentiment-analysis/: results.csv
src/results/cardiffnlp_twitter-roberta-base-sentiment-latest/: classification_report.txt  results.csv
src/results/distilbert_distilbert-base-uncased-finetuned-sst-2-english/: classification_report.txt  results.csv
src/results/mrm8488_camembert-base-finetuned-movie-review-sentiment-analysis/: classification_report.txt  results.csv
src/results/mrm8488_distilroberta-finetuned-financial-news-sentiment-analysis/: classification_report.txt
src/results/nlptown_bert-base-multilingual-uncased-sentiment/: classification_report.txt  results.csv
src/tests/: test_evaluator_api.py  test_preprocessor.py  test_sentiment_analyzer.py
tests/: test_evaluator_api.py  test_preprocessor.py
