[tool.poetry]
name = "emotionevaluator"
version = "0.1.0"
description = "Classify the sentiment of a review"
authors = ["RobinDeSmet <robin_de_smet@hotmail.be>"]
readme = "README.md"
packages = [{ include = "src", from = "." }]

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
nltk = "^3.8.1"
streamlit = "^1.35.0"
fastapi = "^0.111.0"
requests = "^2.32.3"
pydantic = "^2.7.3"
numpy = "^1.26.4"
beautifulsoup4 = "^4.12.3"
lxml = "^5.2.2"
scikit-learn = "^1.5.0"
transformers = "^4.41.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
